# Task-Manager

./: .gitignore  CMakeLists.txt  README.md
include/: Task.h  TaskManager.h
src/: CLI.cpp  CLI.h  main.cpp
src/lib/: Task.cpp  TaskManager.cpp
